# authentication-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: main.py
app/core/: captcha.py  config.py  database.py  email.py  error_handlers.py  exceptions.py  http_client.py  middleware.py  password_breach.py  rate_limit.py  redis.py  request_id.py  security.py
app/core/templates/emails/: account_deletion_scheduled.html  account_deletion_scheduled.txt  new_login_notification.html  new_login_notification.txt  password_breach_advisory.html  password_breach_advisory.txt  password_changed_notification.html  password_changed_notification.txt  password_reset_change.html  password_reset_change.txt  password_reset_forgot.html  password_reset_forgot.txt  sessions_terminated_notification.html  sessions_terminated_notification.txt  verification.html  verification.txt
app/features/auth/: exceptions.py  models.py  rate_limit.py  router.py  schemas.py  service.py  validators.py
app/migrations/: env.py
app/migrations/versions/: 7f2e9a8b3c4d_add_password_breach_detected_at.py  a1b2c3d4e5f6_add_updated_at_trigger.py  daaf0c9e1d69_create_users_table.py
app/shared/: dependencies.py
docs/superpowers/plans/: 2026-04-16-email-verification.md
docs/superpowers/specs/: 2026-04-16-email-verification-design.md
tests/: conftest.py  setup_db.py
tests/e2e/: test_brute_force_lockout.py  test_concurrent_sessions.py  test_csrf_bound_to_session.py  test_full_register_flow.py  test_grace_session_contract.py  test_lockout_scoped_by_ip.py  test_password_rehash_on_login.py  test_password_reset_flow.py  test_register_timing_equalization.py  test_smtp_down_resilience.py  test_ua_binding_blocks_hijack.py
tests/helpers/: factories.py  mailhog.py
tests/integration/core/: test_captcha.py  test_csrf_middleware.py  test_email_sending.py  test_healthchecks.py  test_rate_limit_middleware.py  test_request_id.py  test_rotation_lock.py  test_security_headers.py  test_session_middleware.py  test_size_limit.py  test_sliding_window.py  test_touch_session_grace.py  test_touch_session_lua.py
tests/integration/features/auth/: test_change_password.py  test_delete_account.py  test_delete_rate_limit_user.py  test_forgot_password.py  test_lockout_layers.py  test_login.py  test_login_breach_check.py  test_login_captcha.py  test_login_no_pii_logs.py  test_logout.py  test_logout_all.py  test_me.py  test_register.py  test_register_hibp.py  test_resend_verification.py  test_reset_password.py  test_security_notifications.py  test_sessions_management.py  test_verify_email.py
tests/unit/: test_config.py  test_config_extra_checks.py
tests/unit/core/: test_email_utils.py  test_middleware_helpers.py  test_password_breach.py  test_redis_tls.py  test_request_id_sanitize.py  test_security.py  test_xff_spoofing.py
tests/unit/features/: test_dummy_hash.py  test_email_retry.py  test_password_verify_errors.py  test_spawn.py
tests/unit/features/auth/: test_contextual_password.py  test_dob_min_age.py  test_login_email_normalization.py  test_validators.py
