[project]
name = "authentication-service"
version = "0.1.0"
description = "Reusable authentication microservice"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [
    {name = "EduardoSA8006"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "redis[hiredis] (>=7.4.0,<8.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "aiosmtplib (>=3.0.2,<4.0.0)",
    "jinja2 (>=3.1.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.10,<0.16.0)",
    "mypy (>=1.20.1,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<1.0.0)",
    "pytest-cov (>=6.1.0,<7.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "dirty-equals (>=0.10.0,<1.0.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=85",
]
markers = [
    "slow: tests that take >500ms",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/migrations/*",
    "app/__init__.py",
    "app/*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
